separate configuration for surefire-plugin for jdk 1.8